[package]
name = "virtual-buffer"
version = "1.0.3"
authors = ["marc0246 <40955683+marc0246@users.noreply.github.com>"]
edition = "2021"
rust-version = "1.84.0"
description = "A cross-platform library for dealing with buffers backed by raw virtual memory"
documentation = "https://docs.rs/virtual-buffer"
readme = "README.md"
repository = "https://github.com/vulkano-rs/virtual-buffer"
license = "MIT OR Apache-2.0"
keywords = ["virtual", "memory", "lock-free", "concurrent", "vector"]
categories = ["concurrency", "data-structures", "memory-management", "no-std", "no-std::no-alloc"]

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", default-features = false }

[target.'cfg(windows)'.dependencies]
windows-targets = "0.52"

[features]
default = ["std"]
std = ["libc/std", "alloc"]
alloc = []
