[package]
name = "virtual-buffer"
version = "2.0.0"
authors = ["marc0246 <40955683+marc0246@users.noreply.github.com>"]
edition = "2024"
rust-version = "1.87.0"
description = "A cross-platform library for dealing with buffers backed by raw virtual memory"
documentation = "https://docs.rs/virtual-buffer"
readme = "README.md"
repository = "https://github.com/vulkano-rs/virtual-buffer"
license = "MIT OR Apache-2.0"
keywords = ["virtual", "memory", "lock-free", "concurrent", "vector"]
categories = ["concurrency", "data-structures", "memory-management", "no-std", "no-std::no-alloc"]

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", default-features = false }

[target.'cfg(windows)'.dependencies]
windows-targets = "0.53"

[features]
default = ["std"]
std = ["libc/std", "alloc"]
alloc = []

[lints.rust]
unsafe_op_in_unsafe_fn = "forbid"
unused_unsafe = "allow"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
borrow_as_ptr = "allow"
doc_markdown = "allow"
inline_always = "allow"
